[package]
name = "gvm-led-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.0"
eyre = "0.6.8"
futures = "0.3.28"
tokio = { version = "1.30.0", features = ["full"] }
uuid = "1.4.1"
