[package]
name = "gvm-led-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
btleplug = "0.11.0"
debounced = "0.1.0"
eframe = "0.22.0"
egui = "0.22.0"
eyre = "0.6.8"
futures = "0.3.28"
tokio = { version = "1.30.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4"] }
